--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -14,7 +14,8 @@
           "/*.js"
         ],
         "urls": [
-          "https://fonts.googleapis.com/css?family=Oswald:300,700"
+          "https://fonts.googleapis.com/css?family=Oswald:300,700",
+          "https://fonts.gstatic.com/**"
         ]
       }
     }, {
@@ -28,5 +29,18 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {"name": "posts",
+    "urls": [
+      "https://jsonplaceholder.typicode.com/posts"
+    ],
+    "cacheConfig": {
+      "maxSize": 5,
+      "maxAge": "1d",
+      "timeout": "10s",
+      "strategy": "freshness"
+    }
+  }
   ]
 }
